--- a/TSmartClinic.Presentation/Views/_ViewImports.cshtml
+++ b/TSmartClinic.Presentation/Views/_ViewImports.cshtml
@@ -1,3 +1,2 @@
-﻿@using AgendaApp.Presentation
-@using AgendaApp.Presentation.Models
+﻿@using TSmartClinic.Presentation
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
