--- a/TSmartClinic.Presentation/Views/_ViewStart.cshtml
+++ b/TSmartClinic.Presentation/Views/_ViewStart.cshtml
@@ -1,3 +1,18 @@
 ﻿@{
-    Layout = "_Layout";
+    var routeData = this.ViewContext.RouteData.Values["controller"];
+    if (routeData != null)
+    {
+        var controllerName = routeData.ToString();
+
+        switch (controllerName)
+        {
+            case "Account":
+                Layout = "~/Views/Shared/_AccountLayout.cshtml";
+                break;
+
+            case "Home":
+                Layout = "~/Views/Shared/_HomeLayout.cshtml";
+                break;
+        }
+    }
 }
