--- a/TSmartClinic.Presentation/Views/Shared/_AccountLayout.cshtml
+++ b/TSmartClinic.Presentation/Views/Shared/_AccountLayout.cshtml
@@ -36,7 +36,7 @@
 
 </head>
 
-<body style="background: linear-gradient(rgba(52,131,160,.9), rgba(18,46,56,.9)), url('/images/bg.jpg') center no-repeat; background-size: cover;">
+<body style="background: linear-gradient(rgba(52,131,160,.9), rgba(18,46,56,.9)), url('/images/bglogin.png') center no-repeat; background-size: cover;">
     <div>
         <div class="container h-100">
             <div class="row align-items-center h-100">
