--- a/TSmartClinic.Presentation/Views/Shared/_HomeLayout.cshtml
+++ b/TSmartClinic.Presentation/Views/Shared/_HomeLayout.cshtml
@@ -142,7 +142,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="d-flex">
+               @*  <div class="d-flex">
                     <div class="dropdown d-inline-block">
                         <button type="button" class="btn header-item waves-effect" id="page-header-user-dropdown" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                             <img class="rounded-circle header-profile-user" src="~/images/users/avatar.png" alt="Header Avatar">
@@ -157,7 +157,7 @@
                         </div>
                     </div>
 
-                </div>
+                </div> *@
             </div>
         </header>
 
@@ -177,11 +177,11 @@
                                         <ul class="metismenu list-unstyled" id="side-menu">
                                             <li class="menu-title" key="t-menu">Menu Principal</li>
 
-                                            <!-- Início do menu Funcionários -->
+                                            <!-- Início do menu Pacientes -->
                                             <li>
-                                                <a href=/Paciente/Consulta key="t-blog">
-                                                    <i class="bx bx-user"></i>
-                                                    <span key="t-dashboards">Pacientes</span>
+                                                <a href="/Pacientes/PacientesCards" key="t-blog">
+                                                    <i class='bx bx-user-circle'></i>
+                                                    <span>Pacientes</span>
                                                 </a>
                                             </li>
 
@@ -644,6 +644,33 @@
                                                     <span key="t-dashboards">Suporte</span>
                                                 </a>
                                             </li>
+
+                                            <!-- Início do menu Usuario -->
+                                          @*  <li>
+                                           <div class="d-flex">
+                                                <div class="dropdown d-inline-block">
+                                                    <button type="button" class="btn header-item waves-effect" id="page-header-user-dropdown" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                                        <img class="rounded-circle header-profile-user" src="~/images/users/avatar.png" alt="Header Avatar">
+                                                        <span class="d-none d-xl-inline-block ms-1" key="t-henry">Sergio Mendes</span>
+                                                        <i class="mdi mdi-chevron-down d-none d-xl-inline-block"></i>
+                                                    </button>
+                                                    <div class="dropdown-menu dropdown-menu-end">
+                                                        <!-- item-->
+                                                        <a class="dropdown-item" href="#"><i class="bx bx-user font-size-16 align-middle me-1"></i> <span key="t-profile">Minha Conta</span></a>
+                                                        <div class="dropdown-divider"></div>
+                                                        <a class="dropdown-item text-danger" href="/Account/Logout"><i class="bx bx-power-off font-size-16 align-middle me-1 text-danger"></i> <span key="t-logout">Sair do Sistema</span></a>
+                                                    </div>
+                                                </div>
+
+                                            </div> 
+                                            </li>*@
+                                            <li>
+                                                <a href="/MinhaConta">
+                                                    <i class="bx bx-user"></i>
+                                                    <span key="t-minha-conta">Minha Conta</span>
+                                                </a>
+                                            </li>
+
                                         </ul>
                                     </div>
                                 </div>
