Ajustes na tela de Pacientes e Central do Paciente

--- a/TSmartClinic.Presentation/Views/Shared/_HomeLayout.cshtml
+++ b/TSmartClinic.Presentation/Views/Shared/_HomeLayout.cshtml
@@ -29,8 +29,12 @@
     <!-- App Css-->
     <link href="~/assets/css/app.min.css" id="app-style" rel="stylesheet" />
 
+    <!-- Cards Css-->
+    <link rel="stylesheet" href="~/css/card-estilo.css" />
+
     <!-- Site -->
     <link href="~/css/site.css" id="app-style" rel="stylesheet" />
+
 
     <style>
         .clickable:hover {
@@ -179,7 +183,7 @@
 
                                             <!-- Início do menu Pacientes -->
                                             <li>
-                                                <a href="/Pacientes/PacientesCards" key="t-blog">
+                                                <a href="/Pacientes/CardsPacientes" key="t-blog">
                                                     <i class='bx bx-user-circle'></i>
                                                     <span>Pacientes</span>
                                                 </a>
